# qwen-kernel-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmark_results/: ablation_adaptive_both.json  cpu_smoke.json  qwen2.5-0.5b_e2e_adaptive_fusion_paired_fp16.json  qwen2.5-0.5b_e2e_paired_fp16.json  qwen2.5-0.5b_e2e_paired_half2_fp16.json  rtx3070ti_fp16.json  rtx3070ti_fp16_half2.json
benchmarks/: benchmark_ops.py
csrc/: ops.cpp  ops_cuda.cu
examples/: benchmark_qwen_e2e.py  benchmark_qwen_e2e_paired.py  validate_qwen.py
qwen_kernel_lab/: __init__.py  integration.py  ops.py
tests/: test_ops.py
tools/: doctor.py
