[build-system]
requires = ["setuptools>=68", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-kernel-lab"
version = "0.1.0"
description = "Correctness-first C++/CUDA fused operators and Qwen inference benchmarks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch>=2.4"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
qwen = ["transformers>=4.45", "safetensors>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

